processed/jira/txt/LU/LU-5310.txt
Key:        LU-5310
Summary:    build error in Centos 7
Link:       https://jira.whamcloud.com/browse/LU-5310
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Bob Glossman
Reporter:   Bob Glossman
Created:    Wed, 9 Jul 2014 17:19:10 +0000
Updated:    Thu, 10 Jul 2014 17:07:49 +0000
Resolved:   Thu, 10 Jul 2014 17:07:49 +0000
Links:      Related: is related to  LU-5223; Related: is related to  LU-5022

--- Description ---
server build now breaks in Centos 7/el7.  client-only build still works OK.

example errors:

  CC [M]  /home/bogl/lustre-release/lustre/mdd/mdd_dir.o
/home/bogl/lustre-release/lustre/mdd/mdd_dir.c: In function ‘mdd_migrate_create’:
/home/bogl/lustre-release/lustre/mdd/mdd_dir.c:3396:26: error: argument to ‘sizeof’ in ‘memset’ call is the same expression as the destination; did you mean to dereference it? [-Werror=sizeof-pointer-memaccess]
  memset(mgr_ea, 0, sizeof(mgr_ea));
                          ^
cc1: all warnings being treated as errors
make[6]: *** [/home/bogl/lustre-release/lustre/mdd/mdd_dir.o] Error 1
make[5]: *** [/home/bogl/lustre-release/lustre/mdd] Error 2
make[4]: *** [/home/bogl/lustre-release/lustre] Error 2
make[3]: *** [_module_/home/bogl/lustre-release] Error 2
make[3]: Leaving directory `/home/bogl/rb/BUILD/kernel-3.10.0_123.4.2.l0708'
make[2]: *** [modules] Error 2
make[2]: Leaving directory `/home/bogl/lustre-release'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/bogl/lustre-release'
make: *** [all] Error 2

I believe this is due to the recent landing in master of commit de2d5808bd2987f76d2486272e1a9c192ba277d4; LU-5223 lmv: build master LMV EA dynamically build via readdir

It appears the gcc v4.8.2 in el7 is a bit pickier about some things than earlier gcc versions.

--- Comment (jlevi, Thu, 10 Jul 2014 17:07:49 +0000) ---
Patch landed to Master.

--- Comment (bogl, Thu, 10 Jul 2014 16:31:45 +0000) ---
Have verified the build failure isn't specific to el7.  It will happen with any gcc v4.8.x.  I've seen it now with both v4.8.2 and v4.8.3.  The fix is good for all cases so far.

--- Comment (bogl, Wed, 9 Jul 2014 21:16:26 +0000) ---
I think the 1 line correction I commented on above & pushed as a patch is functionally correct as well as repairing the build, but I will appreciate good reviews on it to make sure I didn't mess up.

--- Comment (bogl, Wed, 9 Jul 2014 21:05:00 +0000) ---
http://review.whamcloud.com/11035

--- Comment (simmonsja, Wed, 9 Jul 2014 19:00:11 +0000) ---
At least it is a nice simple patch.

--- Comment (brian, Wed, 9 Jul 2014 17:36:54 +0000) ---
It appears the gcc v4.8.2 in el7 is a bit pickier about some things than earlier gcc versions.

Isn't it always?    Ultimately though, this is good though.

--- Comment (bogl, Wed, 9 Jul 2014 17:35:35 +0000) ---
fwiw, changing the offending source line to:

       memset(mgr_ea, 0, sizeof(*mgr_ea));

fixes the build.
